REF migrate to java 17